# FAQ_Chatbot_Assistant

./: README.md  pyproject.toml
FAQ_Agentic_Chatbot/: chat_main_test.py
FAQ_Agentic_Chatbot/config/: __init__.py  agent_config.py  model_config.py
FAQ_Agentic_Chatbot/retrieval_data/: __init__.py  chat_memory.py  docs_to_milvus_cloud.py  rag_engine.py
FAQ_Agentic_Chatbot/retrieval_data/data/: character_template.docx
FAQ_Chatbot/: llama_index_engine.py  test_shit.py  test_tool.py
chatbot_engine/: llama_index_config.py  main.py
testing_chat_before_deleting/: docs_to_vector_to_llm_testing_only.py  error.txt  kokokomi.json  llama_index_config_v1.py  main.py  testing_chat_history.py  testing_chat_main.py  vector_to_embed_tool.py
testing_chat_before_deleting/data_sources/: kokomi.docx
testing_chat_before_deleting/to_be_deleted_or_not_organizing_file/: llama_index_config.py  llama_index_config_v1.py  testing_chat_main.py
